--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 		<div class="col-sm-3"><div class="team-member"><h4>Karl Surmacz</h4><p class="text-muted">Zimmer Biomet, UK</p></div></div>
 	</div>
         <h3><p class="text-muted">Co-organizer</p></h3>
-        <img class="ratio" src="assets/img/sensor_tag.png" alt="cannot find"> 
+        <img class="ratio" src="dist/assets/img/sensor_tag.png" alt="cannot find"> 
         </div>
 	</section>
         
@@ -275,6 +275,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="dist/js/scripts.js"></script>
     </body>
 </html>
