--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
 						</p>
 
 						<p class="text-muted">This workshop intends to prompt state-of-the-art approaches on deep learning for human activity recognition. The organizers invite researchers to participate and submit their research papers in the Deep Learning for Human Activity Recognition Workshop.   
-						</p>                    
+						</p>   
+	
+						<p class="text-muted">If you are interested this topic, please refer the <a href="https://sites.google.com/site/zhangleuestc/deep-learning-for-human-activity-recognition">1st workshop</a> and <a href="https://keyplay.github.io/ijcai2020workshop/">2nd workshop</a>. 
+						</p>
 				</div>
                 </div>
             </div>
@@ -104,9 +107,11 @@
 						<div class="col-md-4"><p class="text-muted">Sensor fusion for HAR using deep learning</p></div>
 						<div class="col-md-4"><p class="text-muted"> Fusion of shallow models with deep networks for HAR</p></div>
 						<div class="col-md-4"><p class="text-muted">Device heterogeneous for device-based HAR</p></div>
-						<div class="col-md-4"><p class="text-muted">Environment changes for device-free HAR</p></div>
 						<div class="col-md-4"><p class="text-muted"> Transfer Learning for HAR</p></div>
+						<div class="col-md-4"><p class="text-muted">Federated Learning for HAR</p></div>
+						<div class="col-md-4"><p class="text-muted">Reinforcement Learning for HAR</p></div>
 						<div class="col-md-4"><p class="text-muted">Online Learning for HAR</p></div>
+						<div class="col-md-4"><p class="text-muted">Self-supervised Learning for HAR</p></div>
 						<div class="col-md-4"> <p class="text-muted">Semi-supervised Learning for HAR</p></div>
 						<div class="col-md-4"> <p class="text-muted">Survey for deep learning based HAR</p></div>
 					</div>
