--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
                         <h1 class="text-uppercase text-white font-weight-bold">3rd International Workshop on Deep Learning for Human Activity Recognition</h1>
                         <hr class="divider my-4" />
                     </div>
-                    <div class="col-lg-8 align-self-baseline">
+                    <div class="col-lg-9 align-self-baseline">
                         <p class="text-white-75 font-weight-light mb-5">Held in conjunction with IJCAI-21, 21st – 26th August, 2021 in Montreal</p>
+						<a class="btn btn-primary btn-xl js-scroll-trigger" href="https://sites.google.com/site/zhangleuestc/deep-learning-for-human-activity-recognition">1st workshop</a>
+						<a class="btn btn-primary btn-xl js-scroll-trigger" href="https://keyplay.github.io/ijcai2020workshop/">2nd workshop</a>
                     </div>
                 </div>
             </div>
