--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <div class="col-lg-10 col-md-6 text-center">
 						<table class="table table-bordered table-hover white"><tbody> 
 						<tr><td>June 30, 2021 <del> May 31, 2021 </del> </td> <td>Submission deadline</td></tr>
-						<tr><td>July 1, 2021</td> <td>Acceptance notification</td></tr>
+						<tr><td>July 15, 2021 <del> July 1, 2021 </del> </td> <td>Acceptance notification</td></tr>
 						<tr><td>August 21-23, 2021</td> <td>Conference dates</td></tr>
 						</tbody></table>
                         <p class="text-muted">As requested by authors, we will extend the submission to June 30 to give more time for authors. Thanks.</p> 
