--- a/index.html
+++ b/index.html
@@ -169,7 +169,9 @@
 			<p class="text-muted"> <b>21:50--22:10</b> <br>
 			  Oral 3: Few Shot Activity Recognition Using Variational Inference <br> 
 			 Neeraj Kumar and Siddhansh Narang  </p> 
+             </div>
 			 
+               <div class="row">
 			  <p class="text-muted"> <b>22:10--22:30 </b> <br>
 			  Invited Presentation by Dr. Xu Yuecong from A*STAR, Singapore <br>
 			 Title: TBD </p> 
