--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 						<div class="col-md-4"><p class="text-muted">AI Fairness</p></div>
 						<div class="col-md-4"><p class="text-muted">Safe AI</p></div>
 						<div class="col-md-4"> <p class="text-muted">Trustworthy AI</p></div>
+                        <div class="col-md-4"> <p class="text-muted"></p></div>
 						<div class="col-md-4"><p class="text-muted"> Data analytics for Technologies to enable a Sustainable Future (e.g. climate modelling, batteries or renewables development and utilization, urban sustainability)</p></div>
 					</div>
                 </div>
