--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 					    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Dates">Important Dates</a></li>
 					    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#topics">Topics</a></li>
 					    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#submission">Submission and Registration</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#reproduce">Reproducibility Guidelines</a></li>
 					    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#schedule">Program Schedule</a></li>
 					    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#committee">Committee</a></li>
                     </ul>
@@ -132,6 +133,19 @@
 					<p class="text-muted">The authors are invited to submit  papers (6-10+ pages) by emailing to Chen_Zhenghua@i2r.a-star.edu.sg and/or zhangleuestc@gmail.com.</p>
 						  <p class="text-muted">Authors should consult Springer's&nbsp;<a href="ftp://ftp.springernature.com/cs-proceeding/svproc/guidelines/Springer_Guidelines_for_Authors_of_Proceedings.pdf" style="font-style:inherit;font-variant:inherit;font-weight:inherit;font-stretch:inherit;line-height:inherit;margin:0px;padding:0px;border-width:0px 0px 1px;border-top-style:initial;border-right-style:initial;border-bottom-style:dotted;border-left-style:initial;border-color:initial;vertical-align:baseline;color:inherit">authors' guidelines</a>&nbsp;and use their proceedings templates, either for&nbsp;<a href="ftp://ftp.springernature.com/cs-proceeding/llncs/llncs2e.zip" style="font-style:inherit;font-variant:inherit;font-weight:inherit;font-stretch:inherit;line-height:inherit;margin:0px;padding:0px;border-width:0px 0px 1px;border-top-style:initial;border-right-style:initial;border-bottom-style:dotted;border-left-style:initial;border-color:initial;vertical-align:baseline;color:inherit">LaTeX</a>&nbsp;or for&nbsp;<a href="ftp://ftp.springernature.com/cs-proceeding/llncs/word/splnproc1703.zip" style="font-style:inherit;font-variant:inherit;font-weight:inherit;font-stretch:inherit;line-height:inherit;margin:0px;padding:0px;border-width:0px 0px 1px;border-top-style:initial;border-right-style:initial;border-bottom-style:dotted;border-left-style:initial;border-color:initial;vertical-align:baseline;color:inherit">Word</a>, for the preparation of their papers. Springer encourages authors to include their ORCIDs in their papers. In addition, the corresponding author of each paper, acting on behalf of all of the authors of that paper, must complete and sign a&nbsp;<a href="https://folk.ntnu.no/andriis/hidamt2019/Contract_Book_Contributor_Consent_to_Publish_CCIS_SIP.pdf" style="font-style:inherit;font-variant:inherit;font-weight:inherit;font-stretch:inherit;line-height:inherit;margin:0px;padding:0px;border-width:0px 0px 1px;border-top-style:initial;border-right-style:initial;border-bottom-style:dotted;border-left-style:initial;border-color:initial;vertical-align:baseline;color:inherit" rel="nofollow">Consent-to-Publish form</a>, through which the copyright for their paper is transferred to Springer.</p><p class="text-muted">All papers will undergoo peer-review before the acceptance decision will be made.</p><p class="text-muted">The authors of accepted papers must guarantee their presence at the workshop for the presentation. At least one author of each accepted paper must register for the conference.</p><p class="text-muted">For the registration, The information can be found on the conference webpage.</p></div>
 					-->			  
+			</div>
+		</section>
+        <section class="page-section" id="reproduce">
+			<div class="container">
+			  <div class="row">
+				<div class="col-lg-12 text-center"><h2 class="section-heading text-uppercase">Reproducibility Guidelines</h2><hr class="divider my-4" /></div>
+					<p class="text-muted">Authors must complete a reproducibility checklist at the time of paper submission (the questions in PDF format) 
+                        [<a href="https://www.cs.mcgill.ca/~jpineau/ReproducibilityChecklist-v2.0.pdf">https://www.cs.mcgill.ca/~jpineau/ReproducibilityChecklist-v2.0.pdf</a>]. Authors are strongly recommended to start thinking about these questions 
+                        already when writing the paper and to fill in the questionnaire well in time before the submission deadline. These responses will become part of 
+                        each paper submission and will be shared with the area chairs and/or reviewers to help them in the evaluation process. Reviewers will be asked to assess 
+                        the degree to which the results reported in a paper are reproducible, and this assessment will be weighed when making final decisions about each paper. 
+                        These responses will help facilitate the “Open Source Project Forum” initiative of the conference.
+					<!-- <a href="https://easychair.org/my/conference?conf=2nddlhar2020#">Submission Link</a></p>		  
 			</div>
 		</section>
 		<section class="bg-light page-section" id="schedule">
