--- a/index.html
+++ b/index.html
@@ -265,6 +265,10 @@
             <p class="text-muted">New Jersey Institute of Technology, USA</p>
           </div>
 		</div>
+         <div class="col-sm-3">
+          <div class="team-member">
+          </div>
+		</div>
 		<div class="col-sm-3">
           <div class="team-member">
 			<h4>Dr. Ooi Chin Chun </h4>
@@ -280,7 +284,7 @@
           </div>
 		</div>
 		</div>
-      
+    <div class="row"></div>  
     <div class="row">
         <h3 class="col-lg-12 text-center">Program Committee</h3>
 		<div class="col-sm-3"><div class="team-member"><h4>Xi Peng</h4><p class="text-muted">Sichuan University, P.R.C</p></div></div>
@@ -293,7 +297,6 @@
 		<div class="col-sm-3"><div class="team-member"><h4>Lu Xiaoxuan</h4><p class="text-muted">University of Edinburg, UK</p></div></div>
 		<div class="col-sm-3"><div class="team-member"><h4>Le Zhang</h4><p class="text-muted">University of Electronic Science and Technology of China</p></div></div>
 		<div class="col-sm-3"><div class="team-member"><h4>Artur Andrzejak </h4><p class="text-muted">Heidelberg University, German</p></div></div>
-		<div class="col-sm-3"><div class="team-member"><h4>Stephan Hoyer </h4><p class="text-muted">Google, USA</p></div></div>
 		<div class="col-sm-3"><div class="team-member"><h4>Shaowu Pan</h4><p class="text-muted">University of Washington, USA</p></div></div>
 		<div class="col-sm-3"><div class="team-member"><h4>Yang Feng </h4><p class="text-muted">A*STAR, Singapore</p></div></div>
 	</div>
