--- a/index.html
+++ b/index.html
@@ -285,7 +285,9 @@
           </div>
 		</div>
 		</div>
-    <div class="row"></div>  
+    <div class="row">
+        <h3 class="col-lg-12 text-center"> </h3>
+    </div>  
     <div class="row">
         <h3 class="col-lg-12 text-center">Program Committee</h3>
 		<div class="col-sm-3"><div class="team-member"><h4>Xi Peng</h4><p class="text-muted">Sichuan University, P.R.C</p></div></div>
