--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@
 			  <div class="row">
 				<div class="col-lg-12 text-center"><h2 class="section-heading text-uppercase">Reproducibility Guidelines</h2><hr class="divider my-4" /></div>
 					<p class="text-muted">Authors must complete a reproducibility checklist at the time of paper submission (the questions in PDF format) 
-                        [<a href="https://www.cs.mcgill.ca/~jpineau/ReproducibilityChecklist-v2.0.pdf">https://www.cs.mcgill.ca/~jpineau/ReproducibilityChecklist-v2.0.pdf</a>]. Authors are strongly recommended to start thinking about these questions 
+                        [<a href="https://www.cs.mcgill.ca/~jpineau/ReproducibilityChecklist-v2.0.pdf">PDF format link</a>]. </p>
+                    <p class="text-muted"> Authors are strongly recommended to start thinking about these questions 
                         already when writing the paper and to fill in the questionnaire well in time before the submission deadline. These responses will become part of 
                         each paper submission and will be shared with the area chairs and/or reviewers to help them in the evaluation process. Reviewers will be asked to assess 
                         the degree to which the results reported in a paper are reproducible, and this assessment will be weighed when making final decisions about each paper. 
-                        These responses will help facilitate the “Open Source Project Forum” initiative of the conference.
-					<!-- <a href="https://easychair.org/my/conference?conf=2nddlhar2020#">Submission Link</a></p>		  
+                        These responses will help facilitate the “Open Source Project Forum” initiative of the conference.</p>		  
 			</div>
 		</section>
 		<section class="bg-light page-section" id="schedule">
