--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 			  <div class="row">
 				<div class="col-lg-12 text-center"><h2 class="section-heading text-uppercase">Reproducibility Guidelines</h2><hr class="divider my-4" /></div>
 					<p class="text-muted">Authors must complete a reproducibility checklist at the time of paper submission (the questions in PDF format) 
-                        [<a href="https://www.cs.mcgill.ca/~jpineau/ReproducibilityChecklist-v2.0.pdf">PDF format link</a>]. </p>
+                        [<a href="https://www.cs.mcgill.ca/~jpineau/ReproducibilityChecklist-v2.0.pdf">checklist link</a>]. </p>
                     <p class="text-muted"> Authors are strongly recommended to start thinking about these questions 
                         already when writing the paper and to fill in the questionnaire well in time before the submission deadline. These responses will become part of 
                         each paper submission and will be shared with the area chairs and/or reviewers to help them in the evaluation process. Reviewers will be asked to assess 
