--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <hr class="divider my-4" />
                     </div>
                     <div class="col-lg-9 align-self-baseline">
-                        <p class="text-white-75 font-weight-light mb-5">Held in conjunction with with IEEE ICDM 2022, November 30 2022, Orlando, FL, USA</p>
+                        <p class="text-white font-weight-bold mb-5">Held in conjunction with IEEE ICDM 2022, December 1 2022, Orlando, FL, USA</p>
                     </div>
                 </div>
             </div>
@@ -143,8 +143,8 @@
 				<div class="col-lg-12 text-center"><h2 class="section-heading text-uppercase">Reproducibility Guidelines</h2><hr class="divider my-4" /></div>
 					<p class="text-muted">Authors must complete a reproducibility checklist at the time of paper submission (the questions in PDF format) 
                         [<a href="https://www.cs.mcgill.ca/~jpineau/ReproducibilityChecklist-v2.0.pdf">checklist link</a>]. </p>
-                    <p class="text-muted"> Authors are strongly recommended to start thinking about these questions 
-                        already when writing the paper and to fill in the questionnaire well in time before the submission deadline. These responses will become part of 
+                    <p class="text-muted"> Authors are strongly recommended to start thinking about these questions already when writing the paper and to fill in the questionnaire
+                          before submission. These responses will become part of 
                         each paper submission and will be shared with the area chairs and/or reviewers to help them in the evaluation process. Reviewers will be asked to assess 
                         the degree to which the results reported in a paper are reproducible, and this assessment will be weighed when making final decisions about each paper. 
                         These responses will help facilitate the “Open Source Project Forum” initiative of the conference.</p>		  
