--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <hr class="divider my-4" />
                     </div>
                     <div class="col-lg-9 align-self-baseline">
-                        <p class="text-white font-weight-bold mb-5">Held in conjunction with IEEE ICDM 2022, December 1 2022, Orlando, FL, USA</p>
+                        <p class="text-white-75 font-weight-bold mb-5">Held in conjunction with IEEE ICDM 2022, December 1 2022, Orlando, FL, USA</p>
                     </div>
                 </div>
             </div>
