--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
     <div class="row">
         <h3 class="col-lg-12 text-center">Program Committee</h3>
 		<div class="col-sm-3"><div class="team-member"><h4>Xi Peng</h4><p class="text-muted">Sichuan University, P.R.C</p></div></div>
-        <div class="col-sm-3"><div class="team-member"><h4>Vincent Zheng </h4><p class="text-muted">Advanced Digital Sciences Center, Singapore</p></div></div>
+        <div class="col-sm-3"><div class="team-member"><h4>Zemin Liu</h4><p class="text-muted">Singapore Management University, Singapore</p></div></div>
 		<div class="col-sm-3"><div class="team-member"><h4>Sinno Pan </h4><p class="text-muted">Nanyang Technological University, Singapore</p></div></div>
 		<div class="col-sm-3"><div class="team-member"><h4>Keyu Wu</h4><p class="text-muted">A*STAR, Singapore</p></div></div>
 		<div class="col-sm-3"><div class="team-member"><h4>Bing Li</h4><p class="text-muted">University of New South Wale, Australian</p></div></div>
