--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <hr class="divider my-4" />
                     </div>
                     <div class="col-lg-9 align-self-baseline">
-                        <p class="text-white-75 font-weight-bold mb-5">Held in conjunction with IEEE ICDM 2022, December 1 2022, Orlando, FL, USA</p>
+                        <p class="text-white-75 font-weight-bold mb-5">Held in conjunction with IEEE ICDM 2022, November 28 - December 1 2022, Orlando, FL, USA</p>
                     </div>
                 </div>
             </div>
@@ -88,11 +88,12 @@
                 <div class="row">
                     <div class="col-lg-10 col-md-6 text-center">
 						<table class="table table-bordered table-hover white"><tbody> 
-						<tr><td>September 2, 2022 </td> <td>Submission deadline</td></tr>
-						<tr><td>September 23, 2022</td> <td>Acceptance notification</td></tr>
+						<tr><td>September 17, 2022 <del>September 2, 2022</del></td> <td>Submission deadline</td></tr>
+						<tr><td>October 8, 2022 <del>September 23, 2022</del></td> <td>Acceptance notification</td></tr>
 						<!--<tr><td>August 21-23, 2021</td> <td>Conference dates</td></tr>-->
 						</tbody></table>
                     </div>
+                    <p class="text-muted"> <font color="red"> Due to requests, the workshop paper submission deadline is extended to Sept. 17 2022. The notification date is extended to Oct. 8 2022. </font></p>
                 </div>
             </div>
         </section>
