--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
 			<div class="container">
 			  <div class="row">
 				<div class="col-lg-12 text-center"><h2 class="section-heading text-uppercase">Keynote Speaker</h2><hr class="divider my-4" /></div>
-					<p class="text-muted">TITLE: Explainable AI for Climate Science: Detection, Prediction and Discovery  </p> <!--<img src="dist/assets/img/EmbeddedImage.jpg" width=10%>-->
-                    <p class="text-muted">SPEAKER: Prof. Elizabeth A. Barnes (Colorado State University) </p>
+					<p class="text-muted">TITLE: Explainable AI for Climate Science: Detection, Prediction and Discovery 
+                    <br>SPEAKER: Prof. Elizabeth A. Barnes (Colorado State University) </p> <!--<img src="dist/assets/img/EmbeddedImage.jpg" width=10%>-->
 					<p class="text-muted">ABSTRACT: Earth’s climate is chaotic and noisy. Finding usable signals amidst all 
 					               of the noise can be challenging: be it predicting if it will rain, knowing which direction a 
 								   hurricane will go, understanding the implications of melting Arctic ice, or detecting the impacts of 
